# SCNet

./: .gitignore  check_block_data_dist.ipynb  check_data_dist.ipynb  log_audio.py  main.py  preprocess_beatpulse.pyt  preprocess_pointune.pyt  pyproject.toml
conf/: config-large-10inst.yaml  config-large-block.yaml  config-large.yaml  config.yaml
metadata/: wav_353bcbd7.json  wav_b3147989.json
scnet/: scan_silence.py  solver.py  test.py  train.py  utils.py  wav.py
