[project]
name = "scnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.32.1",
    "einops==0.6.1",
    "ipykernel>=6.29.5",
    "julius==0.2.7",
    "jupyter>=1.1.1",
    "ml-collections==0.1.1",
    "numpy>=1.26.4",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "soundfile==0.12.1",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]
